minor alignement issues

--- a/css/header.css
+++ b/css/header.css
@@ -188,7 +188,7 @@
         line-height: 1.2em;
         padding-left: 1em;
         width: 45%;
-        margin-top: .8em !important;
+        margin-top: .5em !important;
     }
 
     .vertical-nav {
